--- a/index.html
+++ b/index.html
@@ -3,24 +3,51 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>Chris Portfolio</h1>
-    <h2>I am a student</h2>
-    <a href="./public/about.html">About Me</a>
-    <hr>
-    <a href="./public/about.html"><img src="./assets/images/Screenshot.png" height="300" width="350"></a>
+    <h1>My resume</h1>
+
+    <img src="./dog.png" height="200"/>
+
+
+    <h3>Education</h3>
     <ul>
-        <h3>My skills</h3>
-
-        <li>good dec
-        <li>good dec
-        <li>good dec
-        </li>
+        <li>Bachelor of Arts</li>
+        2013
     </ul>
-</body>
 
+    <h3> Work experience</h3>
+    <ul>
+        <li>Creative</li>
+        Apple<br />
+        2014
+        <p>
+            <li>Media Producer</li>
+            Mover Digital tales<br />
+            2016
+        </p>
+    </ul>
+    <p>
+    <ul>
+        <li>User Experience Designer</li>
+        Dennerlein Brands<br />
+        2019
+
+    </ul>
+    </p>
+    <p>
+    <ul>
+        <li>Digital Product Manager</li>
+        EVERNOW<br />
+        2022
+    </ul>
+    </p>
+    <h3><a href="https://moonportapp.com/">My own publications</h3></a>
+</body>
+<footer>
+    <hr/>
+    <p>© 2023 Chris Mols</p>
+  </footer>
 </html>
